Added highscores, no same questions, ending screens + more

--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -2,4 +2,20 @@
 <title>Maantieto Visa </title>
 <h1>Maantieto Visa</h1>
 
-<a href="/paakaupungit">Pääkaupungit</a> 
+<a href="/paakaupungit">Pääkaupungit</a>
+
+{% if session.username %}
+<p>Olet kirjautunut nimellä {{ session.username }}</p>
+<a href="/logout">Kirjaudu ulos</a>
+{% else %}
+<form action="/login" method="POST">
+<p>Tunnus:<br>
+<input type="text" name="username"></p>
+<p>Salasana:<br>
+<input type="password" name="password"></p>
+<input type="submit" value="Kirjaudu">
+</form>
+{% endif %}
+<a href="/register" class="button">Luo uusi tunnus</a>
+
+
