--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -9,13 +9,13 @@
 <a href="/logout">Kirjaudu ulos</a>
 {% else %}
 <form action="/login" method="POST">
-<p>Tunnus:<br>
-<input type="text" name="username"></p>
-<p>Salasana:<br>
-<input type="password" name="password"></p>
-<input type="submit" value="Kirjaudu">
+    <p>Tunnus:<br>
+        <input type="text" name="username">
+    </p>
+    <p>Salasana:<br>
+        <input type="password" name="password">
+    </p>
+    <input type="submit" value="Kirjaudu">
 </form>
 {% endif %}
 <a href="/register" class="button">Luo uusi tunnus</a>
-
-
