fixed some errors

--- a/templates/trivia.html
+++ b/templates/trivia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<title> Paakaupungit </title>
+<title> {{ title }} </title>
 
-<form action="/paakaupungit/result" method="post">
+<form action="{{ url }}" method="post">
 
     <h1> {{ question }} </h1>
 
