added more return to homepage links + link to the food quiz on the frontpage

--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -3,6 +3,8 @@
 <h1>Maantieto Visa</h1>
 
 <a href="/paakaupungit">Pääkaupungit</a>
+<br>
+<a href="/ruoat">Kansallisruoat</a>
 
 {% if session.username %}
 <p>Olet kirjautunut nimellä {{ session.username }}</p>
