Added the review function for the quizzes

--- a/templates/form.html
+++ b/templates/form.html
@@ -10,5 +10,6 @@
     <br>
     <input type="file" name="file">
     <br>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <input type="submit" value="Lähetä">
 </form>
