--- a/templates/wrong_result.html
+++ b/templates/wrong_result.html
@@ -5,7 +5,9 @@
 
     <input type="hidden" name="counter" value="{{ counter }}">
     <input type="hidden" name="right_answers" value="{{ right_answers }}">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <input type="submit" value="Seuraava kysymys">
+    
 
 </form>
 <br>
