--- a/templates/trivia.html
+++ b/templates/trivia.html
@@ -15,6 +15,8 @@
 
     <input type="hidden" name="counter" value="{{ counter }}">
 
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+
     <input type="submit" value="Arvaa">
 
 </form>
