--- a/templates/total_result_bad.html
+++ b/templates/total_result_bad.html
@@ -41,16 +41,16 @@
         </style>
         <div class="stars">
             <form action="/review" method="post">
-              <input class="star star-5" id="star-5" type="radio" name="star" value="star-5"/>
-              <label class="star star-5" for="star-5"></label>
-              <input class="star star-4" id="star-4" type="radio" name="star" value="star-4"/>
-              <label class="star star-4" for="star-4"></label>
-              <input class="star star-3" id="star-3" type="radio" name="star" value="star-3"/>
-              <label class="star star-3" for="star-3"></label>
-              <input class="star star-2" id="star-2" type="radio" name="star" value="star-2"/>
-              <label class="star star-2" for="star-2"></label>
-              <input class="star star-1" id="star-1" type="radio" name="star"  value="star-1"/>
-              <label class="star star-1" for="star-1"></label>
+              <input class="star star-5" id="5" type="radio" name="star" value="5"/>
+              <label class="star star-5" for="5"></label>
+              <input class="star star-4" id="4" type="radio" name="star" value="4"/>
+              <label class="star star-4" for="4"></label>
+              <input class="star star-3" id="3" type="radio" name="star" value="3"/>
+              <label class="star star-3" for="3"></label>
+              <input class="star star-2" id="2" type="radio" name="star" value="2"/>
+              <label class="star star-2" for="2"></label>
+              <input class="star star-1" id="1" type="radio" name="star"  value="1"/>
+              <label class="star star-1" for="1"></label>
               <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
               <input type="hidden" name="question_id" value="{{ question_id }}">
               <input type="submit" value="Arvioi">
