--- a/templates/correct_result.html
+++ b/templates/correct_result.html
@@ -1,3 +1,7 @@
+<title>Maantieto Visa </title>
+<head>
+    <link rel="stylesheet" href="/static/stylesheets/trivia.css">
+</head>
 <form action="{{ url }}" method="POST">
     <p>
         Oikein! Tuloksesi: {{ right_answers }}/{{ counter }}
@@ -10,5 +14,6 @@
     
 
 </form>
-<br>
-<a href="/">Palaa etusivulle</a>
+<p>
+&nbsp;&nbsp;<a href="/">Palaa etusivulle</a>
+</p>
