--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,18 @@
+<head>
+    <link rel="stylesheet" href="/static/stylesheets/register.css">
+</head>
 <form action="/register" method="post">
-    Käyttäjätunnus: <br><input type="text" name="username" minlength="3" maxlength="20">
+    <p>
+        Käyttäjätunnus: <br><input type="text" name="username" minlength="3" maxlength="20">
+    </p>
     <p>
         Salasana: <br><input type="password" name="password1" minlength="3" maxlength="30">
+    </p>
     <p>
         Salasana uudestaan: <br><input type="password" name="password2">
         <input type="submit" value="Luo tunnus">
+    </p>
 </form>
+<p>
 <a href="/">Palaa etusivulle</a>
+</p>
