--- a/templates/wrong_result.html
+++ b/templates/wrong_result.html
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="/static/stylesheets/trivia.css">
+</head>
 <form action="{{ url }}" method="POST">
     <p>
         Väärin, oikea vastaus oli {{ correct }}. Tuloksesi: {{ right_answers }}/{{ counter }}
@@ -11,4 +14,7 @@
 
 </form>
 <br>
+<br>
+<p>
 <a href="/">Palaa etusivulle</a>
+</p>
