--- a/templates/errors.html
+++ b/templates/errors.html
@@ -1,3 +1,6 @@
+<head>
+    <link rel="stylesheet" href="/static/stylesheets/trivia.css">
+</head>
 {{ error }}
 <br>
 <a href="/">Palaa etusivulle</a>
