--- a/templates/review.html
+++ b/templates/review.html
@@ -1,2 +1,5 @@
+<head>
+    <link rel="stylesheet" href="/static/stylesheets/trivia.css">
+</head>
 Kiitos arviosta!
 <a href="/">Palaa etusivulle</a>
