--- a/templates/total_result_bad.html
+++ b/templates/total_result_bad.html
@@ -9,6 +9,7 @@
 
     <head>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/static/stylesheets/trivia.css">
         </head>
         <style>
             div.stars {
