--- a/templates/total_result_ok.html
+++ b/templates/total_result_ok.html
@@ -12,6 +12,7 @@ Arvioi tietovisa tässä!
 
 <head>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/stylesheets/main.css">
     </head>
     <style>
         div.stars {
