--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -14,7 +14,7 @@
 <nav>
     <li><a href="/paakaupungit">Pääkaupungit</a></li>
     <li><a href="/ruoat">Kansallisruoat</a></li>
-    &nbsp;&nbsp;<li><a href="/liput">Liput</a></li>
+    <li><a href="/liput">Liput</a></li>
     <br>
     <div class="stars">
     {% if stars_capitals == 5 %}
@@ -66,7 +66,7 @@
     {% endif %}
     </div>
     <div class="stars">
-    &nbsp;&nbsp;&nbsp;&nbsp;{% if stars_food == 5 %}
+    {% if stars_food == 5 %}
     <span class="fa fa-star checked"></span>
     <span class="fa fa-star checked"></span>
     <span class="fa fa-star checked"></span>
