--- a/templates/wrong_result.html
+++ b/templates/wrong_result.html
@@ -1,3 +1,5 @@
+<title>Maantieto Visa </title>
+
 <head>
     <link rel="stylesheet" href="/static/stylesheets/trivia.css">
 </head>
@@ -10,11 +12,11 @@
     <input type="hidden" name="right_answers" value="{{ right_answers }}">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <input type="submit" value="Seuraava kysymys">
-    
+
 
 </form>
 <br>
 <br>
 <p>
-<a href="/">Palaa etusivulle</a>
+    <a href="/">Palaa etusivulle</a>
 </p>
