--- a/static/stylesheets/register.css
+++ b/static/stylesheets/register.css
@@ -3,7 +3,7 @@ body {
     font-size: 35px;
     margin: auto;
     max-width: 35em;
-    font-family: 'Helvetica', 'Arial' sans-serif;
+    font-family:sans-serif;
     background-color: rgb(110, 227, 248);
 }
 p {
