--- a/static/stylesheets/trivia.css
+++ b/static/stylesheets/trivia.css
@@ -2,24 +2,28 @@ h1 {
     background-image: url(/static/images/header_image.jpg);
     background-size: 1500px 300px;
     border-radius: .5em;
-    font-size: 45px;;
+    font-size: 45px;
+    ;
     color: white;
     padding: 2em 0em;
     text-align: center;
-  }
+}
+
 body {
     color: white;
     font-size: 35px;
     margin: auto;
     max-width: 35em;
-    font-family: 'Helvetica', 'Arial' sans-serif;
+    font-family: sans-serif;
     background-color: rgb(110, 227, 248);
 }
+
 p {
     display: inline-block;
     text-align: auto;
     font-size: 30px;
-  }
+}
+
 form {
     border-radius: .5em;
     max-width: 15em;
@@ -29,19 +33,20 @@ form {
     float: left;
 }
 
-.left{
-    float:left;
+.left {
+    float: left;
 }
 
-.right{
+.right {
     max-width: 50em;
-    margin-left:830px;
+    margin-left: 830px;
 }
-.answer{
+
+.answer {
     float: left
 }
 
-.return{
+.return {
     font-size: 30px;
     margin-left: 550px;
 }
