--- a/templates/total_result_ok.html
+++ b/templates/total_result_ok.html
@@ -1,66 +1,79 @@
 <p>
-    Hienoa, osaat aiheen melko hyvin!
-    <br>
-    <br>
-    Tuloksesi: {{ right_answers }}/{{ counter }}
-    <br>
-    <a href="/"> Palaa etusivulle.</a>
+  Hienoa, osaat aiheen melko hyvin!
+  <br>
+  <br>
+  Tuloksesi: {{ right_answers }}/{{ counter }}
+  <br>
+  <a href="/"> Palaa etusivulle.</a>
 </p>
 <br>
 <br>
 Arvioi tietovisa tässä!
 
 <head>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/stylesheets/main.css">
-    </head>
-    <style>
-        div.stars {
-      width: 270px;
-      display: inliFalsene-block;
-    }
-    input.star { display: none; }
-    label.star {
-      float: right;
-      padding: 10px;
-      font-size: 36px;
-      color: #444;
-      transition: all .2s;
-    }
-    input.star:checked ~ label.star:before {
-      content: '\f005';
-      color: #FD4;
-      transition: all .25s;
-    }
-    input.star-5:checked ~ label.star:before {
-      color: #FE7;
-      text-shadow: 0 0 20px #952;
-    }
-    input.star-1:checked ~ label.star:before { color: #F62; }
-    label.star:hover { transform: rotate(-15deg) scale(1.3); }
-    label.star:before {
-      content: '\f006';
-      font-family: FontAwesome;
-    }
-    </style>
-    <div class="stars">
-        <form action="/review" method="post">
-          <input class="star star-5" id="star-5" type="radio" name="star" required="required" value="star-5"/>
-          <label class="star star-5" for="5"></label>
-          <input class="star star-4" id="4" type="radio" name="star" value="4"/>
-          <label class="star star-4" for="4"></label>
-          <input class="star star-3" id="3" type="radio" name="star" value="3"/>
-          <label class="star star-3" for="3"></label>
-          <input class="star star-2" id="2" type="radio" name="star" value="2"/>
-          <label class="star star-2" for="2"></label>
-          <input class="star star-1" id="1" type="radio" name="star"  value="1"/>
-          <label class="star star-1" for="1"></label>
-          <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-          <input type="hidden" name="question_id" value="{{ question_id }}">
-          <br>
-          <input type="submit" value="Arvioi">
-        </form>
-      </div>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/static/stylesheets/main.css">
+</head>
+<style>
+  div.stars {
+    width: 270px;
+    display: inliFalsene-block;
+  }
+
+  input.star {
+    display: none;
+  }
+
+  label.star {
+    float: right;
+    padding: 10px;
+    font-size: 36px;
+    color: #444;
+    transition: all .2s;
+  }
+
+  input.star:checked~label.star:before {
+    content: '\f005';
+    color: #FD4;
+    transition: all .25s;
+  }
+
+  input.star-5:checked~label.star:before {
+    color: #FE7;
+    text-shadow: 0 0 20px #952;
+  }
+
+  input.star-1:checked~label.star:before {
+    color: #F62;
+  }
+
+  label.star:hover {
+    transform: rotate(-15deg) scale(1.3);
+  }
+
+  label.star:before {
+    content: '\f006';
+    font-family: FontAwesome;
+  }
+</style>
+<div class="stars">
+  <form action="/review" method="post">
+    <input class="star star-5" id="star-5" type="radio" name="star" required="required" value="star-5" />
+    <label class="star star-5" for="5"></label>
+    <input class="star star-4" id="4" type="radio" name="star" value="4" />
+    <label class="star star-4" for="4"></label>
+    <input class="star star-3" id="3" type="radio" name="star" value="3" />
+    <label class="star star-3" for="3"></label>
+    <input class="star star-2" id="2" type="radio" name="star" value="2" />
+    <label class="star star-2" for="2"></label>
+    <input class="star star-1" id="1" type="radio" name="star" value="1" />
+    <label class="star star-1" for="1"></label>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+    <input type="hidden" name="question_id" value="{{ question_id }}">
+    <br>
+    <input type="submit" value="Arvioi">
+  </form>
+</div>
 <br>
 <a href="/"> Palaa etusivulle.</a>
 </p>
